--- a/.github/workflows/example-build-docker.yml
+++ b/.github/workflows/example-build-docker.yml
@@ -3,7 +3,7 @@ name: Build and Push Docker Image to ECR
 on:
   push:
     branches:
-      - main # or specify any branch you want to trigger this workflow on
+      - main
 
 jobs:
   build-and-push:
@@ -15,21 +15,20 @@ jobs:
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v2
-# 
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
     - name: Log in to Amazon ECR
-      id: login-ecr
       uses: aws-actions/amazon-ecr-login@v2
 
-    - name: Configure AWS credentials with session token
+    - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v2
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }} # Use the session token
-        aws-region: us-east-1 # Change to your AWS region
+        aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }} # Optional if using session tokens
+        aws-region: us-east-1
 
     - name: Get ECR repository URI
       id: ecr_uri
@@ -37,7 +36,7 @@ jobs:
 
     - name: Build, tag, and push Docker image
       env:
-        ECR_URI: {{"927546943206.dkr.ecr.us-east-1.amazonaws.com/hellonode" }}
+        ECR_URI: ${{ env.REPO_URI }}
         IMAGE_TAG: ${{ github.sha }}
       run: |
         yarn --frozen-lockfile
@@ -45,7 +44,7 @@ jobs:
         docker build -t $ECR_URI:$IMAGE_TAG .
         docker push $ECR_URI:$IMAGE_TAG
 
-    # - name: Image digest
-    #   run: |
-    #     IMAGE_DIGEST=$(docker inspect --format='{{index .RepoDigests 0}}' ${{ env.REPO_URI }}:${{ github.sha }})
-    #     echo "Docker image pushed: $IMAGE_DIGEST"
+    - name: Image digest
+      run: |
+        IMAGE_DIGEST=$(docker inspect --format='{{index .RepoDigests 0}}' ${{ env.REPO_URI }}:${{ github.sha }})
+        echo "Docker image pushed: $IMAGE_DIGEST"
