--- a/.github/workflows/example-build-docker.yml
+++ b/.github/workflows/example-build-docker.yml
@@ -21,6 +21,9 @@ jobs:
 
     - name: Log in to Amazon ECR
       uses: aws-actions/amazon-ecr-login@v2
+      with:
+        registry-type: private # Ensure this matches your ECR registry type
+        aws-region: us-east-1  # Specify your AWS region here
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v2
