--- a/.github/workflows/example-build-docker.yml
+++ b/.github/workflows/example-build-docker.yml
@@ -19,7 +19,6 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
-    
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v2
@@ -36,7 +35,7 @@ jobs:
 
     - name: Build, tag, and push Docker image
       env:
-        ECR_URI: ${{ env.REPO_URI }}
+        ECR_URI: "927546943206.dkr.ecr.us-east-1.amazonaws.com/hellonode"
         IMAGE_TAG: ${{ github.sha }}
       run: |
         yarn --frozen-lockfile
