--- a/.github/workflows/example-build-docker.yml
+++ b/.github/workflows/example-build-docker.yml
@@ -19,7 +19,6 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
-
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v2
       with:
@@ -33,12 +32,22 @@ jobs:
       with:
         aws-region: us-east-1  # Specify your AWS region here
 
+    - name: Remove package-lock.json if it exists
+      run: |
+        if [ -f package-lock.json ]; then
+          rm package-lock.json
+        fi
+
+    - name: Install dependencies
+      run: yarn install --frozen-lockfile
+
+    - name: Build the project
+      run: yarn nx build api-flowaccount-workshop
+
     - name: Build, tag, and push Docker image
       env:
         ECR_URI: "927546943206.dkr.ecr.us-east-1.amazonaws.com/hellonode"
         IMAGE_TAG: ${{ github.sha }}
       run: |
-        yarn --frozen-lockfile
-        yarn nx build api-flowaccount-workshop
         docker build -t $ECR_URI:$IMAGE_TAG .
         docker push $ECR_URI:$IMAGE_TAG
