--- a/.github/workflows/example-build-docker.yml
+++ b/.github/workflows/example-build-docker.yml
@@ -24,7 +24,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+        aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }} # Optional if using session tokens
         aws-region: us-east-1
 
     - name: Log in to Amazon ECR
@@ -41,8 +41,11 @@ jobs:
     - name: Install dependencies
       run: yarn install --frozen-lockfile
 
+    - name: Install Nx CLI
+      run: yarn global add nx  # Ensure Nx CLI is available
+
     - name: Build the project
-      run: yarn build:prod  # Adjust to your actual build script
+      run: yarn Nx build api-flowaccount-workshop
 
     - name: Build, tag, and push Docker image
       env:
